--- a/task 1.2.ipynb
+++ b/task 1.2.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "6"
       ]
      },
      "execution_count": 2,
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "1+1+4"
    ]
   },
   {
@@ -71,19 +71,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "17dae9e9-317b-42f9-827b-d1c3a8b8aa05",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# hi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e22c076a",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
