--- a/task 1.2.ipynb
+++ b/task 1.2.ipynb
@@ -82,6 +82,14 @@
    "cell_type": "markdown",
    "id": "e22c076a",
    "metadata": {},
+   "source": [
+    "# bye"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a640824",
+   "metadata": {},
    "source": []
   }
  ],
