--- a/1.4 scraping data.ipynb
+++ b/1.4 scraping data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1391,
+   "execution_count": 13,
    "id": "3fbae419-a876-471e-be3f-2b44e8ecd99a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1393,
+   "execution_count": 15,
    "id": "277b0587-6bd4-4968-812a-d3a25e6faffe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1394,
+   "execution_count": 16,
    "id": "be9fef9c-66f0-4f88-a8ee-347a821ef560",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1396,
+   "execution_count": 18,
    "id": "8672d596-4756-4760-bf64-b0f6f8fd62db",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1397,
+   "execution_count": 19,
    "id": "7c04e710-72bd-4365-b3aa-f04342771c01",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1398,
+   "execution_count": 44,
+   "id": "af966767-f696-43d1-ac3b-e2ecd7060597",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Timeline of the 20th century</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Infectious disease in the 20th century</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Death rates in the 20th century</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>List of battles 1901-2000</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20th century inventions</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>20th-century art</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>List of 20th-century religious leaders</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>UNESCO</td>\n",
+       "      <td>28 February 2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The 20th Century Research Project</td>\n",
+       "      <td>archived 26 February 2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Slouching Towards Utopia: The Economic History...</td>\n",
+       "      <td>archived 6 February 2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>TIME Archives The greatest writers of the 20th...</td>\n",
+       "      <td>archived 17 January 2005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                event  \\\n",
+       "0                        Timeline of the 20th century   \n",
+       "1              Infectious disease in the 20th century   \n",
+       "2                     Death rates in the 20th century   \n",
+       "3                           List of battles 1901-2000   \n",
+       "4                             20th century inventions   \n",
+       "5                                    20th-century art   \n",
+       "6              List of 20th-century religious leaders   \n",
+       "7                                              UNESCO   \n",
+       "8                   The 20th Century Research Project   \n",
+       "9   Slouching Towards Utopia: The Economic History...   \n",
+       "10  TIME Archives The greatest writers of the 20th...   \n",
+       "\n",
+       "                         date  \n",
+       "0                     Unknown  \n",
+       "1                     Unknown  \n",
+       "2                     Unknown  \n",
+       "3                     Unknown  \n",
+       "4                     Unknown  \n",
+       "5                     Unknown  \n",
+       "6                     Unknown  \n",
+       "7            28 February 2008  \n",
+       "8   archived 26 February 2012  \n",
+       "9    archived 6 February 2012  \n",
+       "10   archived 17 January 2005  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # Convert to DataFrame\n",
+    "df = pd.DataFrame(events, columns=[\"event\", \"date\"])\n",
+    "\n",
+    " # Show result\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e343bb63-d157-477e-8e30-c8e55dc182aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[32m/var/folders/cd/8vl1s70d6dqgshpmc74wr4hw0000gn/T/ipykernel_21663/3930136377.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df.csv(\u001b[33mr'/Users/yasersouri/Desktop/data analysis/specialization 1/20th-century/scraped-df.csv'\u001b[39m)\n",
+      "\u001b[32m/opt/anaconda3/envs/20th_century/lib/python3.13/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6295\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6296\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6297\u001b[39m         ):\n\u001b[32m   6298\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6299\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute 'csv'"
+     ]
+    }
+   ],
+   "source": [
+    "df.csv(r'/Users/yasersouri/Desktop/data analysis/specialization 1/20th-century/scraped-df.csv',ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "fe8f23bb-b743-4643-a5a4-8ba202b3a49a",
    "metadata": {},
    "outputs": [],
@@ -156,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1399,
+   "execution_count": 22,
    "id": "2e5f3da7-cc72-4c82-98b2-c3ed5c05d23c",
    "metadata": {},
    "outputs": [],
@@ -168,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1400,
+   "execution_count": 23,
    "id": "684f2c02-0da2-4bec-84a8-fc0537389105",
    "metadata": {},
    "outputs": [
@@ -189,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1404,
+   "execution_count": 24,
    "id": "26d819b5-3c49-4feb-b952-70bbdbb7fa6b",
    "metadata": {},
    "outputs": [
