--- a/1.4 scraping data.ipynb
+++ b/1.4 scraping data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "3fbae419-a876-471e-be3f-2b44e8ecd99a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "277b0587-6bd4-4968-812a-d3a25e6faffe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "be9fef9c-66f0-4f88-a8ee-347a821ef560",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "8672d596-4756-4760-bf64-b0f6f8fd62db",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "7c04e710-72bd-4365-b3aa-f04342771c01",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "af966767-f696-43d1-ac3b-e2ecd7060597",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "10   archived 17 January 2005  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,30 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "e343bb63-d157-477e-8e30-c8e55dc182aa",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32m/var/folders/cd/8vl1s70d6dqgshpmc74wr4hw0000gn/T/ipykernel_21663/3930136377.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df.csv(\u001b[33mr'/Users/yasersouri/Desktop/data analysis/specialization 1/20th-century/scraped-df.csv'\u001b[39m)\n",
-      "\u001b[32m/opt/anaconda3/envs/20th_century/lib/python3.13/site-packages/pandas/core/generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6295\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6296\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6297\u001b[39m         ):\n\u001b[32m   6298\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6299\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute 'csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.csv(r'/Users/yasersouri/Desktop/data analysis/specialization 1/20th-century/scraped-df.csv',ind)"
+    "df.to_csv(r'/Users/yasersouri/Desktop/data analysis/specialization 1/20th-century/scraped-df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "fe8f23bb-b743-4643-a5a4-8ba202b3a49a",
    "metadata": {},
    "outputs": [],
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "2e5f3da7-cc72-4c82-98b2-c3ed5c05d23c",
    "metadata": {},
    "outputs": [],
@@ -323,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "684f2c02-0da2-4bec-84a8-fc0537389105",
    "metadata": {},
    "outputs": [
@@ -344,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "26d819b5-3c49-4feb-b952-70bbdbb7fa6b",
    "metadata": {},
    "outputs": [
@@ -1060,6 +1047,7 @@
       "World at the beginning of the century[edit]\n",
       "Main article: Edwardian era\n",
       "The new beginning of the 20th century marked significant changes. The 1900s saw the decade herald a series of inventions, including the automobile, airplane and radio broadcasting. 1914 saw the completion of the Panama Canal.\n",
+      "The Scramble for Africa continued in the 1900s and resulted in wars and genocide across the continent. The atrocities in the Congo Free State shocked the civilized world.\n",
       "From 1914 to 1918, the First World War, and its aftermath, caused major changes in the power balance of the world, destroying or transforming some of the most powerful empires.\n",
       "\n",
       "\"The war to end all wars\": World War I (1914–1918)[edit]\n",
@@ -1957,7 +1945,7 @@
       "\n",
       "\n",
       "\n",
-      "Retrieved from \"https://en.wikipedia.org/w/index.php?title=Key_events_of_the_20th_century&oldid=1287358632\"\n",
+      "Retrieved from \"https://en.wikipedia.org/w/index.php?title=Key_events_of_the_20th_century&oldid=1288658530\"\n",
       "Category: 20th centuryHidden categories: CS1 French-language sources (fr)CS1 errors: ISBN dateArticles with short descriptionShort description is different from WikidataUse dmy dates from January 2025Commons category link from Wikidata\n",
       "\n",
       "\n",
@@ -1965,7 +1953,7 @@
       "\n",
       "\n",
       "\n",
-      " This page was last edited on 25 April 2025, at 18:25 (UTC).\n",
+      " This page was last edited on 4 May 2025, at 01:54 (UTC).\n",
       "Text is available under the Creative Commons Attribution-ShareAlike 4.0 License;\n",
       "additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.\n",
       "\n",
@@ -2084,8 +2072,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6a8e139a-2ccd-48ca-9633-4575350412d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = soup.get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "282fb330-c74e-4345-9636-773c5b539d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = text.encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a58ca817-cd47-43b7-b805-24e0651f30e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('20th_century_article_Wiki.txt', 'wb') as f: \n",
+    "    f.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2f37033-c0f2-41a9-9e9c-7a8cc2bd513d",
    "metadata": {},
    "outputs": [],
    "source": []
