updating network analysis

--- a/1.5 text mining.ipynb
+++ b/1.5 text mining.ipynb
@@ -223,7 +223,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "cce109da-017c-4e3f-8ec9-10c80ed17b9e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,7 +247,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "3c769a10-3221-433f-b9f4-ce4df17420bc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -418,7 +422,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "71e4e11c-662b-461f-b7c9-da6d86ef3e2b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -519,7 +525,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "bfbc68bf-dfe6-44d5-a54b-1c72c4451b30",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1636,7 +1644,9 @@
    "cell_type": "code",
    "execution_count": 100,
    "id": "034be33b-5862-40f7-a7bd-cb994da1ea52",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
