--- a/1.6 NLP & network analysis.ipynb
+++ b/1.6 NLP & network analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "87dffee9-10d4-4697-b43e-cf96faf778b7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8fd8ea1b-64e5-40c6-9d3c-c8d7607dc299",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "6832bc1c-f573-46e2-bc48-ac05a2ab2c60",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "b39bf833-e483-44b4-ae3b-cdce0b81ccc6",
    "metadata": {
     "scrolled": true
@@ -13711,7 +13711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "06cab772-76ea-446c-bc07-fd5363c77cb5",
    "metadata": {},
    "outputs": [],
@@ -13728,7 +13728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "8d5a4a2f-82f7-4d5f-94a7-ea8858f17296",
    "metadata": {
     "scrolled": true
@@ -13840,7 +13840,7 @@
        "9  [The World Wars, the Cold War, the Space Race,...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13859,7 +13859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "5d45b18d-736b-4785-a248-6b4395d5c7dc",
    "metadata": {},
    "outputs": [],
@@ -13870,7 +13870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "d3755456-f194-4a44-bdee-50da43b77736",
    "metadata": {},
    "outputs": [],
@@ -13882,7 +13882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "01f8b15d-01cb-460e-b4d3-b8359484c79c",
    "metadata": {},
    "outputs": [],
@@ -13893,7 +13893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "00d160bf-8cf7-42b8-915a-8fa4db1fa749",
    "metadata": {},
    "outputs": [
@@ -14014,7 +14014,7 @@
        "1558                                        [Hong Kong]      [Hong Kong]  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14037,7 +14037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "id": "298c6262-484c-4c77-a960-5652ad74cf1d",
    "metadata": {},
    "outputs": [],
@@ -14051,7 +14051,7 @@
     "    end_i = min(i + 5, df_sentences_filtered.index[-1])\n",
     "    countries_list = sum(df_sentences_filtered.loc[i:end_i].country_entities, [])\n",
     "\n",
-    "    # Remove duplicated characters that are next to each other\n",
+    "    # Remove duplicated countries that are next to each other\n",
     "    char_unique = [\n",
     "        countries_list[j] for j in range(len(countries_list))\n",
     "        if (j == 0) or countries_list[j] != countries_list[j - 1]\n",
@@ -14065,7 +14065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "fa60210b-284f-4d51-8318-ba97d64a846c",
    "metadata": {},
    "outputs": [
@@ -14172,7 +14172,7 @@
        "[571 rows x 2 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14185,7 +14185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "7f69a8e9-cb79-4c7b-92ba-a9e021b4e4c4",
    "metadata": {},
    "outputs": [
@@ -14253,7 +14253,7 @@
        "4  Austria   France"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14267,7 +14267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "223e01f6-4727-48da-937b-593c50d57ed8",
    "metadata": {},
    "outputs": [
@@ -14302,95 +14302,95 @@
        "      <th>0</th>\n",
        "      <td>Austria</td>\n",
        "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Austria</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Austria</td>\n",
        "      <td>Germany</td>\n",
+       "      <td>Spain</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Austria</td>\n",
        "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Austria</td>\n",
+       "      <td>France</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>1</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Austria</td>\n",
+       "      <td>Estonia</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Estonia</td>\n",
+       "      <td>Latvia</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Latvia</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    source   target  value\n",
-       "0  Austria   France      1\n",
-       "1  Austria   France      1\n",
-       "2  Austria   France      1\n",
-       "3  Austria  Germany      1\n",
-       "4  Austria   France      1\n",
-       "5  Austria  Germany      1\n",
-       "6  Austria   France      1\n",
-       "7  Austria  Germany      1\n",
-       "8  Austria   France      1\n",
-       "9  Austria  Germany      1"
+       "    source     target  value\n",
+       "0  Austria     France      6\n",
+       "1  Austria    Germany     15\n",
+       "2  Germany      Italy     25\n",
+       "3  Germany      Spain      1\n",
+       "4   France     Poland     14\n",
+       "5   France    Germany     23\n",
+       "6  Germany     Poland     23\n",
+       "7  Estonia    Germany      5\n",
+       "8  Estonia     Latvia      6\n",
+       "9   Latvia  Lithuania      6"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "relationships_df[\"value\"] = 1\n",
-    "relationship_df = relationships_df.groupby([\"source\",\"target\"], sort=False, as_index=False).sum()\n",
+    "relationships_df = relationships_df.groupby([\"source\",\"target\"], sort=False, as_index=False).sum()\n",
     "\n",
     "relationships_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 45,
    "id": "6d3d5a3a-c167-43a9-91cd-5e4bf27669a8",
    "metadata": {},
    "outputs": [],
